<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alg_background">

    <EditText
        android:id="@+id/email_box"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="445dp"
        android:background="@drawable/username_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="Enter your email here"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/hint_text_inactive"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/password_box"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="275dp"
        android:background="@drawable/username_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="Enter your new password"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/hint_text_inactive"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/errorMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupButton"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="#FF0000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="130dp"
        android:backgroundTint="@color/deep_red"
        android:text="New Account"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/securityquestion_box"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="361dp"
        android:background="@drawable/username_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="Enter your security question answer"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/hint_text_inactive"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/usernamebox"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="532dp"
        android:background="@drawable/username_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="Enter your username here"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/hint_text_inactive"
        android:textSize="14sp" />


</RelativeLayout>