<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/traveler_homepage">


    <EditText
        android:id="@+id/password_box"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="275dp"
        android:background="@drawable/username_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/password_input"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/hint_text_inactive"
        android:textSize="14sp" />

    <TextView
    android:id="@+id/forgotPasswordLink"
    android:layout_width="155dp"
    android:layout_height="wrap_content"
    android:layout_above="@+id/loginButton"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="47dp"
    android:layout_marginEnd="209dp"

    android:layout_marginBottom="64dp"
    android:text="@string/forgot_password_link"
    android:textColor="@color/almost_white" />

    <TextView
        android:id="@+id/createaccount"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="233dp"
        android:layout_marginEnd="34dp"

        android:layout_marginBottom="64dp"
        android:text="Create New Account"
        android:textColor="@color/almost_white" />

    <TextView
        android:id="@+id/errorMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="#FF0000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="130dp"
        android:backgroundTint="@color/deep_red"
        android:text="Log In"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/username_box"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="361dp"
        android:background="@drawable/username_edittext"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/email_input"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/hint_text_inactive"
        android:textSize="14sp" />


</RelativeLayout>